--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ indent-size = 4
 [tool:pytest]
 testpaths =
     tests/
+filterwarnings =
+    ignore:invalid escape sequence:DeprecationWarning
 
 [mypy]
 ignore_missing_imports = True
